<resources>
    <string name="app_name">labSingup</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_email">Enter eMail</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="gender">"Gender: "</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="ubicacion_actual">Ubicacion</string>
    <string name="date_field">Fecha de nacimiento</string>
    <string name="fecha">FECHA</string>
    <string name="binario">Binary</string>
    <string name="login">LOGIN</string>
    <string-array name="Roles">
        <item>Ciudadano</item>
        <item>Planeador</item>
        <item>Decisor</item>
    </string-array>
</resources>